<resources>
    <string name="app_name">Story Yukk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SIGN UP</string>
    <string name="logout">Keluar</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="storyimageview">storyImageView</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_post">Post</string>
    <string name="title_Profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="camera_x">CameraX</string>
    <string name="previewimages">previewImages</string>
    <string name="Description">Descriptions</string>
    <string name="sticker">sticker</string>
    <string name="maps">Maps</string>
    <string name="welcome">WELCOME</string>

    <!--    maps    -->
    <string name="map_id">99da19cf60762798</string>
    <string name="retry">Retry</string>
    <string name="with_location">With Location</string>
</resources>